snuqs/compiler/qasm_compiler_backup/generated/QASMParser.py
# Generated from QASM.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class QASMParser ( Parser ):

    grammarFileName = "QASM.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'OPENQASM'", "';'", "'qreg'", "'['", 
                     "']'", "'creg'", "'}'", "'gate'", "'{'", "'('", "')'", 
                     "'U'", "'CX'", "','", "'barrier'", "'opaque'", "'measure'", 
                     "'->'", "'reset'", "'if'", "'=='", "'pi'", "'+'", "'-'", 
                     "'*'", "'/'", "'sin'", "'cos'", "'tan'", "'exp'", "'ln'", 
                     "'sqrt'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "NNINTEGER", "REAL", "STRING", 
                      "Whitespace", "Newline", "LineComment", "BlockComment" ]

    RULE_mainprogram = 0
    RULE_version = 1
    RULE_program = 2
    RULE_statement = 3
    RULE_declStatement = 4
    RULE_qregDeclStatement = 5
    RULE_cregDeclStatement = 6
    RULE_gatedeclStatement = 7
    RULE_gatedecl = 8
    RULE_goplist = 9
    RULE_gop = 10
    RULE_gopUGate = 11
    RULE_gopCXGate = 12
    RULE_gopCustomGate = 13
    RULE_gopBarrier = 14
    RULE_paramlist = 15
    RULE_idlist = 16
    RULE_opaqueStatement = 17
    RULE_qopStatement = 18
    RULE_qopUGate = 19
    RULE_qopCXGate = 20
    RULE_qopCustomGate = 21
    RULE_qopMeasure = 22
    RULE_qopReset = 23
    RULE_ifStatement = 24
    RULE_barrierStatement = 25
    RULE_arglist = 26
    RULE_argument = 27
    RULE_explist = 28
    RULE_exp = 29
    RULE_binop = 30
    RULE_negop = 31
    RULE_unaryop = 32

    ruleNames =  [ "mainprogram", "version", "program", "statement", "declStatement", 
                   "qregDeclStatement", "cregDeclStatement", "gatedeclStatement", 
                   "gatedecl", "goplist", "gop", "gopUGate", "gopCXGate", 
                   "gopCustomGate", "gopBarrier", "paramlist", "idlist", 
                   "opaqueStatement", "qopStatement", "qopUGate", "qopCXGate", 
                   "qopCustomGate", "qopMeasure", "qopReset", "ifStatement", 
                   "barrierStatement", "arglist", "argument", "explist", 
                   "exp", "binop", "negop", "unaryop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    ID=33
    NNINTEGER=34
    REAL=35
    STRING=36
    Whitespace=37
    Newline=38
    LineComment=39
    BlockComment=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MainprogramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def version(self):
            return self.getTypedRuleContext(QASMParser.VersionContext,0)


        def program(self):
            return self.getTypedRuleContext(QASMParser.ProgramContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_mainprogram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainprogram" ):
                listener.enterMainprogram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainprogram" ):
                listener.exitMainprogram(self)




    def mainprogram(self):

        localctx = QASMParser.MainprogramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_mainprogram)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.version()
            self.state = 67
            self.program(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REAL(self):
            return self.getToken(QASMParser.REAL, 0)

        def getRuleIndex(self):
            return QASMParser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)




    def version(self):

        localctx = QASMParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(QASMParser.T__0)
            self.state = 70
            self.match(QASMParser.REAL)
            self.state = 71
            self.match(QASMParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(QASMParser.StatementContext,0)


        def program(self):
            return self.getTypedRuleContext(QASMParser.ProgramContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)



    def program(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = QASMParser.ProgramContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_program, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.statement()
            self._ctx.stop = self._input.LT(-1)
            self.state = 80
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = QASMParser.ProgramContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_program)
                    self.state = 76
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 77
                    self.statement() 
                self.state = 82
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declStatement(self):
            return self.getTypedRuleContext(QASMParser.DeclStatementContext,0)


        def gatedeclStatement(self):
            return self.getTypedRuleContext(QASMParser.GatedeclStatementContext,0)


        def opaqueStatement(self):
            return self.getTypedRuleContext(QASMParser.OpaqueStatementContext,0)


        def qopStatement(self):
            return self.getTypedRuleContext(QASMParser.QopStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(QASMParser.IfStatementContext,0)


        def barrierStatement(self):
            return self.getTypedRuleContext(QASMParser.BarrierStatementContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = QASMParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.declStatement()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.gatedeclStatement()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.opaqueStatement()
                pass
            elif token in [12, 13, 17, 19, 33]:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.qopStatement()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.ifStatement()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.barrierStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def qregDeclStatement(self):
            return self.getTypedRuleContext(QASMParser.QregDeclStatementContext,0)


        def cregDeclStatement(self):
            return self.getTypedRuleContext(QASMParser.CregDeclStatementContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_declStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclStatement" ):
                listener.enterDeclStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclStatement" ):
                listener.exitDeclStatement(self)




    def declStatement(self):

        localctx = QASMParser.DeclStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declStatement)
        try:
            self.state = 93
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.qregDeclStatement()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.cregDeclStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QregDeclStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(QASMParser.ID, 0)

        def NNINTEGER(self):
            return self.getToken(QASMParser.NNINTEGER, 0)

        def getRuleIndex(self):
            return QASMParser.RULE_qregDeclStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQregDeclStatement" ):
                listener.enterQregDeclStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQregDeclStatement" ):
                listener.exitQregDeclStatement(self)




    def qregDeclStatement(self):

        localctx = QASMParser.QregDeclStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_qregDeclStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(QASMParser.T__2)
            self.state = 96
            self.match(QASMParser.ID)
            self.state = 97
            self.match(QASMParser.T__3)
            self.state = 98
            self.match(QASMParser.NNINTEGER)
            self.state = 99
            self.match(QASMParser.T__4)
            self.state = 100
            self.match(QASMParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CregDeclStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(QASMParser.ID, 0)

        def NNINTEGER(self):
            return self.getToken(QASMParser.NNINTEGER, 0)

        def getRuleIndex(self):
            return QASMParser.RULE_cregDeclStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCregDeclStatement" ):
                listener.enterCregDeclStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCregDeclStatement" ):
                listener.exitCregDeclStatement(self)




    def cregDeclStatement(self):

        localctx = QASMParser.CregDeclStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cregDeclStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(QASMParser.T__5)
            self.state = 103
            self.match(QASMParser.ID)
            self.state = 104
            self.match(QASMParser.T__3)
            self.state = 105
            self.match(QASMParser.NNINTEGER)
            self.state = 106
            self.match(QASMParser.T__4)
            self.state = 107
            self.match(QASMParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GatedeclStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gatedecl(self):
            return self.getTypedRuleContext(QASMParser.GatedeclContext,0)


        def goplist(self):
            return self.getTypedRuleContext(QASMParser.GoplistContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_gatedeclStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGatedeclStatement" ):
                listener.enterGatedeclStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGatedeclStatement" ):
                listener.exitGatedeclStatement(self)




    def gatedeclStatement(self):

        localctx = QASMParser.GatedeclStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_gatedeclStatement)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.gatedecl()
                self.state = 110
                self.goplist()
                self.state = 111
                self.match(QASMParser.T__6)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.gatedecl()
                self.state = 114
                self.match(QASMParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GatedeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(QASMParser.ID, 0)

        def idlist(self):
            return self.getTypedRuleContext(QASMParser.IdlistContext,0)


        def paramlist(self):
            return self.getTypedRuleContext(QASMParser.ParamlistContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_gatedecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGatedecl" ):
                listener.enterGatedecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGatedecl" ):
                listener.exitGatedecl(self)




    def gatedecl(self):

        localctx = QASMParser.GatedeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_gatedecl)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(QASMParser.T__7)
                self.state = 119
                self.match(QASMParser.ID)
                self.state = 120
                self.idlist()
                self.state = 121
                self.match(QASMParser.T__8)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(QASMParser.T__7)
                self.state = 124
                self.match(QASMParser.ID)
                self.state = 125
                self.match(QASMParser.T__9)
                self.state = 126
                self.match(QASMParser.T__10)
                self.state = 127
                self.idlist()
                self.state = 128
                self.match(QASMParser.T__8)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 130
                self.match(QASMParser.T__7)
                self.state = 131
                self.match(QASMParser.ID)
                self.state = 132
                self.match(QASMParser.T__9)
                self.state = 133
                self.paramlist()
                self.state = 134
                self.match(QASMParser.T__10)
                self.state = 135
                self.idlist()
                self.state = 136
                self.match(QASMParser.T__8)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GoplistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gop(self):
            return self.getTypedRuleContext(QASMParser.GopContext,0)


        def goplist(self):
            return self.getTypedRuleContext(QASMParser.GoplistContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_goplist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoplist" ):
                listener.enterGoplist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoplist" ):
                listener.exitGoplist(self)




    def goplist(self):

        localctx = QASMParser.GoplistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_goplist)
        try:
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.gop()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.gop()
                self.state = 142
                self.goplist()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gopUGate(self):
            return self.getTypedRuleContext(QASMParser.GopUGateContext,0)


        def gopCXGate(self):
            return self.getTypedRuleContext(QASMParser.GopCXGateContext,0)


        def gopCustomGate(self):
            return self.getTypedRuleContext(QASMParser.GopCustomGateContext,0)


        def gopBarrier(self):
            return self.getTypedRuleContext(QASMParser.GopBarrierContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_gop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGop" ):
                listener.enterGop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGop" ):
                listener.exitGop(self)




    def gop(self):

        localctx = QASMParser.GopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_gop)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.gopUGate()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.gopCXGate()
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.gopCustomGate()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 4)
                self.state = 149
                self.gopBarrier()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GopUGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def explist(self):
            return self.getTypedRuleContext(QASMParser.ExplistContext,0)


        def ID(self):
            return self.getToken(QASMParser.ID, 0)

        def getRuleIndex(self):
            return QASMParser.RULE_gopUGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGopUGate" ):
                listener.enterGopUGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGopUGate" ):
                listener.exitGopUGate(self)




    def gopUGate(self):

        localctx = QASMParser.GopUGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_gopUGate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(QASMParser.T__11)
            self.state = 153
            self.match(QASMParser.T__9)
            self.state = 154
            self.explist()
            self.state = 155
            self.match(QASMParser.T__10)
            self.state = 156
            self.match(QASMParser.ID)
            self.state = 157
            self.match(QASMParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GopCXGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(QASMParser.ID)
            else:
                return self.getToken(QASMParser.ID, i)

        def getRuleIndex(self):
            return QASMParser.RULE_gopCXGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGopCXGate" ):
                listener.enterGopCXGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGopCXGate" ):
                listener.exitGopCXGate(self)




    def gopCXGate(self):

        localctx = QASMParser.GopCXGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_gopCXGate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(QASMParser.T__12)
            self.state = 160
            self.match(QASMParser.ID)
            self.state = 161
            self.match(QASMParser.T__13)
            self.state = 162
            self.match(QASMParser.ID)
            self.state = 163
            self.match(QASMParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GopCustomGateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(QASMParser.ID, 0)

        def idlist(self):
            return self.getTypedRuleContext(QASMParser.IdlistContext,0)


        def explist(self):
            return self.getTypedRuleContext(QASMParser.ExplistContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_gopCustomGate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGopCustomGate" ):
                listener.enterGopCustomGate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGopCustomGate" ):
                listener.exitGopCustomGate(self)




    def gopCustomGate(self):

        localctx = QASMParser.GopCustomGateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_gopCustomGate)
        try:
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.match(QASMParser.ID)
                self.state = 166
                self.idlist()
                self.state = 167
                self.match(QASMParser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.match(QASMParser.ID)
                self.state = 170
                self.match(QASMParser.T__9)
                self.state = 171
                self.match(QASMParser.T__10)
                self.state = 172
                self.idlist()
                self.state = 173
                self.match(QASMParser.T__1)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 175
                self.match(QASMParser.ID)
                self.state = 176
                self.match(QASMParser.T__9)
                self.state = 177
                self.explist()
                self.state = 178
                self.match(QASMParser.T__10)
                self.state = 179
                self.idlist()
                self.state = 180
                self.match(QASMParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GopBarrierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(QASMParser.IdlistContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_gopBarrier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGopBarrier" ):
                listener.enterGopBarrier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGopBarrier" ):
                listener.exitGopBarrier(self)




    def gopBarrier(self):

        localctx = QASMParser.GopBarrierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_gopBarrier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(QASMParser.T__14)
            self.state = 185
            self.idlist()
            self.state = 186
            self.match(QASMParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(QASMParser.IdlistContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_paramlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamlist" ):
                listener.enterParamlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamlist" ):
                listener.exitParamlist(self)




    def paramlist(self):

        localctx = QASMParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_paramlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.idlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(QASMParser.ID, 0)

        def idlist(self):
            return self.getTypedRuleContext(QASMParser.IdlistContext,0)


        def getRuleIndex(self):
            return QASMParser.RULE_idlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdlist" ):
                listener.enterIdlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdlist" ):
                listener.exitIdlist(self)




    def idlist(self):
